--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <html>
-  <body>
-    <h1>Sumador</h1>
-    <form id="sumar-form">
-      <label for="primer-numero">Primer número:</label>
-      <input type="number" id="primer-numero" />
-      <label for="segundo-numero">Segundo número:</label>
-      <input type="number" id="segundo-numero" />
-      <input type="submit" value="Sumar" />
-    </form>
+  <body>    
+    <form id="cantidad-form">
+      <label for="cantidad-item">Cantidad Item:</label>
+      <input type="number" id="cantidad-item"/>
+      <label for="precio-item">Precio Item:</label>
+      <input type="number" id="precio-item"/>      
+      <Select id = "estado-item">
+        <Option value = 'UT'> UT </option>        
+        <Option value = 'NV'> NV </option>        
+        <Option value = 'TX'> TX </option>        
+        <Option value = 'AL'> AL </option>
+        <Option value = 'CA'> CA </option>
+      </Select>  
+      <input type="submit" value="Totalizar"/>
+    </form> 
     <div id="resultado-div"></div>
 
     <script type="module" src="./src/presenter.js"></script>
+      
   </body>
 </html>
